<resources>
    <string name="app_name" translatable="false">Badass Health</string>
    <string name="calculate">Calculate</string>
    <string name="default_weight">Weight\n 0 \nkg</string>
    <string name="default_name">Your Name</string>
    <string name="default_height">Height\n 0 \ncm</string>
    <string name="default_yearsold">Age\n 0 \nyearsold</string>
    <string name="open_drawer" translatable="false">Open Menu</string>
    <string name="close_drawer" translatable="false">Close Menu</string>
    <string name="btmenu_profile">Profile</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="textWater">"Water Need to drink/day : "</string>
    <string name="unitNeedwater" translatable="false">" ml."</string>
    <string name="or">" or "</string>
    <string name="unitGlasses">" glasses"</string>
    <string name="inputBMR" translatable="false">"BMR: "</string>
    <string name="inputBMI" translatable="false">"BMI: "</string>
    <string name="unitAgr">years</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="unitHeight" translatable="false">cm.</string>
    <string name="unitWeight" translatable="false">Kg.</string>
    <string name="Weight">Weight</string>
    <string name="fullmale" translatable="false">male</string>
    <string name="fullfemale" translatable="false">female</string>
    <string name="defaultwater">Water Need</string>
    <string name="defaultinputAge">Your Age</string>
    <string name="defaultinputWeight">Your Weight</string>
    <string name="defaultinputHeight">Your Height</string>
    <string name="defaultinputUsername">Your Username</string>
    <string name="errorNullfill">Please fill in all blanks.</string>
    <string name="inputName">"Your name : "</string>
    <string name="inputAge">"Age : "</string>
    <string name="unitKg" translatable="false">Kg.</string>
    <string name="unitCm" translatable="false">cm.</string>
    <string name="unitYearold">years</string>
    <string name="showWater" translatable="false">"Water Need per day: "</string>
    <string name="helptitle" translatable="false">BMI หรือ Body Mass Index</string>
    <string name="helpBmrTitle" translatable="false">BMR หรือ Basal Metabolic Rate</string>
    <string name="criterion" translatable="false">ต่ำกว่า 17  = ผอม\n17-18.4    = สมส่วน \n18.5-24.9  = เริ่มจะอ้วน\n25-29.9    = อวบระยะสุดท้าย\nมากกว่า 30 = อ้วนแบบอันตราย</string>
    <string name="descriptionBMI" translatable="false">เป็นดัชนีชี้วัด โดยเอาน้ำหนักของเราตั้ง หารด้วยค่าความสูง ได้เท่าไร ก็มาดูว่าอยู่ในเกณฑ์ไหน ผอมไป, น้ำหนักตัวกำลังดี หรือว่าน้ำหนักตัวเกินมาตราฐานเข้าข่ายอ้วนนั้นเอง</string>
    <string name="descriptionBMR" translatable="false">ค่าพลังงานที่ร่างกายต้องการเพื่อที่จะทำให้กระบวนการพื้นฐานเพื่อการดำรงชีวิต</string>
    <string name="statusOverfat">Too Fat.</string>
    <string name="statusTin">Too Thin.</string>
    <string name="statusTin1">Good Shape.</string>
    <string name="statusStartfat">A bit fat.</string>
    <string name="statusFat">Fat.</string>
    <string name="about">About</string>
    <string name="appnameVersion" translatable="false">BadassHealth V1.0</string>
    <string name="unitCal" translatable="false">Kcal.</string>
    <string name="contentDes_editprofile">Edit Profile</string>
    <string name="north">Thanaphat Crirutpadathorn</string>
    <string name="nok">Kanokporn Fongranon</string>
    <string name="arun">Arun Suwannachai</string>
    <string name="kendo">Thummarat Heamatugsin</string>
    <string name="gave">Thanasak Kovitveeratham</string>

</resources>
