<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.savezone.badasshealth.MainActivity">

    <RelativeLayout
        android:id="@+id/linearLaout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/contentContainer"
            android:layout_alignLeft="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="150dp"
            android:layout_height="?attr/actionBarSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aa"/>


    </RelativeLayout>
<LinearLayout
    android:layout_gravity = "start"
    android:background="#ddd"
    android:orientation="vertical"
    android:layout_width="@dimen/drawer_menu_width"
    android:layout_height="match_parent">
        <ImageView
            android:padding="@dimen/s20dp"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>
        <TextView
            android:text="@string/helptitle"
            android:background="@color/help"
            android:gravity="center"
            android:textSize="@dimen/t16sp"
            android:padding="@dimen/s10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <TextView
            android:text="@string/descriptionBMI"
            android:background="@color/white"
            android:gravity="start"
            android:textSize="@dimen/t14sp"
            android:paddingTop="@dimen/s10dp"
            android:paddingBottom="@dimen/s10dp"
            android:paddingLeft="@dimen/s10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <TextView
            android:text="@string/criterion"
            android:background="@color/white"
            android:gravity="start"
            android:textSize="@dimen/t14sp"
            android:paddingTop="@dimen/s10dp"
            android:paddingBottom="@dimen/s10dp"
            android:paddingLeft="@dimen/s10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <TextView
                android:text="@string/helpBmrTitle"
                android:background="@color/help"
                android:gravity="center"
                android:textSize="@dimen/t16sp"
                android:padding="@dimen/s10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/descriptionBMR"
                android:background="@color/white"
                android:gravity="start"
                android:textSize="@dimen/t14sp"
                android:paddingTop="@dimen/s10dp"
                android:paddingBottom="@dimen/s10dp"
                android:paddingLeft="@dimen/s10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/about"
                android:textSize="@dimen/t20sp"
                android:background="@drawable/selector_btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"/>


</LinearLayout>

</android.support.v4.widget.DrawerLayout>
